# sublime_debugger

./: README.rst  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py
docs/source/: changelog.rst  conf.py  configuration.rst  toc.rst
docs/source/_static/: static.css
docs/source/modules/: modules.rst  sublime_debugger.change_project.rst  sublime_debugger.config.rst  sublime_debugger.console.rst  sublime_debugger.library.rst  sublime_debugger.rst
src/sublime_debugger/: __header__.py  __init__.py  change_project.py  config.py  console.py  library.py
tests/: test_sublime_debugger.py
