[tool.poetry]
name = "sublime_debugger"
version = "1.0"
description = ""
authors = ["dtomlinson <dtomlinson@williamhill.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
python-language-server = "^0.31.2"
Rope = "^0.14.0"
Pyflakes = "^2.1"
McCabe = "^0.6.1"
pycodestyle = "^2.5"
pydocstyle = "^4.0"
autopep8 = "^1.4"
YAPF = "^0.29.0"
pudb = "^2019.2"
pyls-black = "^0.4.4"

[tool.poetry.plugins."console_scripts"]
"sublime-debugger" = "sublime_debugger.console:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

